--- a/frontend_festival/src/app/pages/buy/buy.component.css
+++ b/frontend_festival/src/app/pages/buy/buy.component.css
@@ -10,7 +10,19 @@
     max-width: 1200px;
     margin: auto;
 }
-
+#festivalName {
+    font-size: 20px;
+    color: #d32f2f;
+}
+#festivalType {
+    font-size: 18px;
+    font-weight: lighter;
+    font-style: italic;
+}
+.location-icon {
+    padding: 5px;
+    color: rgb(252, 85, 85);
+}
 /* Información del festival */
 .col-md-5:first-of-type {
     background: #ffffff; /* Fondo blanco para el contenido */
