--- a/frontend_festival/src/app/pages/home/home.component.css
+++ b/frontend_festival/src/app/pages/home/home.component.css
@@ -55,6 +55,9 @@ h1 {
     margin-top: 8px;
     margin-bottom: 8px;
 }
+.fa-wallet {
+    color:#72855b;
+}
 
 .card-text {
     /* Descripción del festival */
@@ -76,7 +79,7 @@ h1 {
 
 .location-icon {
     margin: 6px;
-    color: rgb(251, 99, 99);
+    color: rgb(248, 120, 120);
 }
 
 .card-footer{
@@ -89,7 +92,7 @@ h1 {
     background-color: rgb(232, 254, 189);
     border-radius: 4px;
 }
-.search-icon {
+.fa-search {
     color: rgb(112, 169, 255);
   }
 
