--- a/frontend_festival/src/app/pages/home/home.component.css
+++ b/frontend_festival/src/app/pages/home/home.component.css
@@ -21,10 +21,10 @@ h1 {
     font-family:Arial, Helvetica, sans-serif;
     margin: 0;
     font-size: 5rem;
-    color: rgb(71, 129, 71);
+    color: rgb(130, 177, 130);
     padding: 35px;
     font-weight:900;
-    text-shadow: 3px 3px 3px #ffcc00;
+    text-shadow: 3px 3px 3px #9bd9da;
 }
 
 
