--- a/frontend_festival/src/app/pages/home/home.component.html
+++ b/frontend_festival/src/app/pages/home/home.component.html
@@ -31,6 +31,7 @@
           <h4 class="card-title">
             <a [routerLink]="'/buy/' + festival._id" class="festival-title-link">{{ festival.festivalName }}</a>
           </h4>
+          <h5 class="card-type">{{ festival.type }}</h5>
           <p class="card-text">{{ festival.description }}</p>
           <p class="card-text">
             <i class="fas fa-wallet"></i>
