--- a/frontend_festival/src/app/pages/admin/bookings/bookings.component.css
+++ b/frontend_festival/src/app/pages/admin/bookings/bookings.component.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+h1{
+    font-size: 50px;
+    color: #ffeeba;
+}
+
 /* Mensaje sin compras */
 .no-purchases {
     display: flex;
