--- a/frontend_festival/src/app/pages/admin/users/users.component.css
+++ b/frontend_festival/src/app/pages/admin/users/users.component.css
@@ -27,6 +27,11 @@ body {
     margin: 2rem;
 }
 
+h2{
+    color: #ffeeba;
+    font-size: 50px;
+}
+
 /* Título */
 .container h2 {
     color: #ff6b6b;
