--- a/frontend_festival/src/app/pages/buy/buy.component.html
+++ b/frontend_festival/src/app/pages/buy/buy.component.html
@@ -1,17 +1,17 @@
-
 <div class="row">
   @if(festival){
   <div class="col-md-5">
+    <p id="festivalName">{{ festival.festivalName }}</p>
     <div>
-      <img [src]="festival.image" width="350" alt="" />
+      <img [src]="festival.image" width="350" alt="" style=" margin: 20px 20px 20px 20px;"/>
       
-      <iframe width="560" height="315" [src]=" safeUrl " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" [src]=" safeUrl " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 15px; margin: 20px 20px 20px 20px;"></iframe>
 
-
-      <p id="festivalName">{{ festival.festivalName }}</p>
-      <p id="festivalType">{{ festival.type }}</p>
-      <p>{{ festival.description }}</p>
-      <p><i class="fas fa-map-marker-alt location-icon"></i>Localidad: {{ festival.location }}</p>
+      <div class = "texto">
+        <p id="festivalType">{{ festival.type }}</p>
+        <p>{{ festival.description }}</p>
+        <p><i class="fas fa-map-marker-alt location-icon"></i>Localidad: {{ festival.location }}</p>
+      </div>
     </div>
     </div>
     
