--- a/frontend_festival/src/app/components/common/navbar/navbar.component.css
+++ b/frontend_festival/src/app/components/common/navbar/navbar.component.css
@@ -27,6 +27,8 @@ nav {
     }
     .menu-icon {
       display: none;
+      color: inherit;
+      text-decoration: none;
     }
   }
   
@@ -39,6 +41,12 @@ nav {
     }
     .menu-icon {
       display: block;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-bottom: 2px solid #ff4920;
+      max-width: 200px;
+      font-variant: small-caps;
+      text-shadow: 1px 1px black;
     }
   }
   
