--- a/frontend_festival/src/app/pages/buy/buy.component.css
+++ b/frontend_festival/src/app/pages/buy/buy.component.css
@@ -1,3 +1,7 @@
+.texto {
+    margin: 20px 20px 20px 40px;
+}
+
 /* Estilo general del contenedor */
 .row {
     display: flex;
@@ -11,8 +15,12 @@
     margin: auto;
 }
 #festivalName {
-    font-size: 20px;
+    margin: 20px 20px 20px 20px;
+    font-size: 55px;
     color: #d32f2f;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    text-shadow: 2px 2px #eb9a93;
 }
 #festivalType {
     font-size: 18px;
@@ -20,7 +28,7 @@
     font-style: italic;
 }
 .location-icon {
-    padding: 5px;
+    padding: 25px;
     color: rgb(252, 85, 85);
 }
 /* Información del festival */
@@ -236,3 +244,4 @@ h4 {
         padding: 2rem;
     }
 }
+
