--- a/frontend_festival/src/app/components/common/navbar/navbar.component.css
+++ b/frontend_festival/src/app/components/common/navbar/navbar.component.css
@@ -1,256 +1,214 @@
 nav {
-    background: linear-gradient(45deg, #ff6b6b, #ffcc00); /* Fondo vibrante */
-    color: #ffffff; 
-    padding: 1rem; 
-    font-family: 'Arial', sans-serif; 
-    height: 150px;
+  background: linear-gradient(45deg, #ff6b6b, #ffcc00); /* Fondo vibrante */
+  color: #ffffff; 
+  padding: 1rem; 
+  font-family: 'Arial', sans-serif; 
+  height: 150px;
 }
 
 /* Esconder el menú en dispositivos pequeños por defecto */
 .menu {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .menu-icon {
-    display: none;
-    font-size: 2rem;
-    cursor: pointer;
-  }
-  
-  /* Mostrar el menú en dispositivos grandes */
-  @media (min-width: 768px) {
-    .menu {
-      display: flex;
-    }
-    .menu-icon {
-      display: none;
-      color: inherit;
-      text-decoration: none;
-    }
-  }
-  
-  /* Mostrar el menú hamburguesa en dispositivos pequeños */
-  @media (max-width: 767px) {
-    .menu {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-    }
-    .menu-icon {
-      display: block;
-      text-decoration: none;
-      padding: 10px 20px;
-      border-bottom: 2px solid #ff4920;
-      max-width: 200px;
-      font-variant: small-caps;
-      text-shadow: 1px 1px black;
-    }
-  }
-  
-  /* Estilos para los elementos del menú */
-  .menu li {
-    padding: 15px;
-  }
-  
-  .menu li a {
-    text-decoration: none;
-    color: whitesmoke;
-    display: block;
-  }
-  
-  /* Estilos para el menú desplegable */
-  .menu.show {
-    display: flex;
-  }
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-icon {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+
+/* Estilos para los elementos del menú */
+.menu li {
+  padding: 15px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: whitesmoke;
+  display: block;
+}
+
+/* Estilos para el menú desplegable */
+.menu.show {
+  display: flex;
+}
 
 nav div {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
 }
 nav .logo {
-    width: 110px;
-    height: 110px;
-    border: 1px solid white;
-    border-radius: 30px;
-    margin-left: 50px;
+  width: 110px;
+  height: 110px;
+  border: 1px solid white;
+  border-radius: 30px;
+  margin-left: 50px;
 }
 
 nav h2 {
-    margin: 0;
-    font-size: 4rem; /* Tamaño de fuente del título */
-    background-image: url('https://st2.depositphotos.com/3474805/7901/v/950/depositphotos_79018730-stock-illustration-beautiful-summer-festival-element.jpg'); /*Imagen de fondo*/
-    background-size: cover; /* Cubrir todo el contenedor */
-    background-position: center; /* Centrar la imagen */
-    background-repeat: no-repeat; /* No repetir la imagen */
-    padding: 2rem 4rem; /* Espaciado interno mayor */
-    border-radius: 10px; /* Bordes redondeados */
-    color: #ffffff; /* Color del texto */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra del texto para mejor legibilidad */
-    height: 150px; /* Altura del contenedor */
-    width: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 0;
+  font-size: 4rem; /* Tamaño de fuente del título */
+  background-image: url('https://st2.depositphotos.com/3474805/7901/v/950/depositphotos_79018730-stock-illustration-beautiful-summer-festival-element.jpg'); 
+  background-size: cover; /* Cubrir todo el contenedor */
+  background-position: center; /* Centrar la imagen */
+  background-repeat: no-repeat; /* No repetir la imagen */
+  padding: 2rem 4rem; /* Espaciado interno mayor */
+  border-radius: 10px; /* Bordes redondeados */
+  color: #ffffff; /* Color del texto */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra del texto para mejor legibilidad */
+  height: 150px; /* Altura del contenedor */
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav button {
-    background: transparent; 
-    border: none; 
-    color: #ffffff; 
-    font-size: 1.5rem; 
-    cursor: pointer;
+  background: transparent; 
+  border: none; 
+  color: #ffffff; 
+  font-size: 1.5rem; 
+  cursor: pointer;
 }
 
 nav button span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #ffffff; 
-    margin: 4px 0; 
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff; 
+  margin: 4px 0; 
 }
 
 nav #navbarNav {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 nav ul {
-    list-style: none; 
-    padding: 0;
-    margin: 0;
-    display: flex;
+  list-style: none; 
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
 
 nav ul li {
-    margin: 0 1rem;
-    position: relative; /* Necesario para el submenú */
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, border 0.3s ease; /* Transiciones suaves */
-    z-index: 2000;
+  margin: 0 1rem;
+  position: relative; /* Necesario para el submenú */
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, border 0.3s ease; /* Transiciones suaves */
+  z-index: 2000;
 }
 
 nav ul li a, nav ul li button {
-    color: #ffffff; 
-    text-decoration: none;
-    font-size: 20px; 
-    font-family: Poppins;
-    display: block;
-    transition: color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
-    position: relative;
-    z-index: 1;
-    margin-right: 100px;
+  color: #ffffff; 
+  text-decoration: none;
+  font-size: 20px; 
+  font-family: Poppins;
+  display: block;
+  transition: color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
+  position: relative;
+  z-index: 1;
+  margin-right: 100px;
 }
 
 /* Efecto festivo de desplazamiento y cambio de color */
 nav ul li:hover {
-    background-color: rgba(255, 165, 0, 0.6); /* Fondo naranja semitransparente para un efecto festivo */
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
-    transform: scale(1.1); /* Aumentar el tamaño del elemento para un efecto festivo */
-    border: 2px solid #ffffff; /* Borde blanco para resaltar el elemento */
+  background-color: rgba(255, 165, 0, 0.6); /* Fondo naranja semitransparente para un efecto festivo */
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
+  transform: scale(1.1); /* Aumentar el tamaño del elemento para un efecto festivo */
+  border: 2px solid #ffffff; /* Borde blanco para resaltar el elemento */
 }
 
 /* Efectos en enlaces y botones */
 nav ul li a:hover, nav ul li button:hover {
-    color: #e4405f; /* Cambia el color del texto a amarillo brillante */
-    transform: scale(1.15); /* Aumenta ligeramente el tamaño del texto para un efecto llamativo */
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Sombra de texto brillante */
-    font-family: Bebas Neue, sans-serif;
+  color: #e4405f; /* Cambia el color del texto a amarillo brillante */
+  transform: scale(1.15); /* Aumenta ligeramente el tamaño del texto para un efecto llamativo */
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Sombra de texto brillante */
+  font-family: Bebas Neue, sans-serif;
 }
 
 /* Animación de fondo de enlace en hover */
 nav ul li a {
-    position: relative;
-    overflow: hidden;
-    padding: 0.5rem 1rem;
-    transition: color 0.4s ease;
+  position: relative;
+  overflow: hidden;
+  padding: 0.5rem 1rem;
+  transition: color 0.4s ease;
 }
 
 nav ul li a::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 200%;
-    height: 200%;
-    background: radial-gradient(circle, rgba(255, 99, 71, 0.8), rgba(255, 215, 0, 0.8)); /* Gradiente radial */
-    transition: width 0.4s ease, height 0.4s ease;
-    border-radius: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    z-index: 0;
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255, 99, 71, 0.8), rgba(255, 215, 0, 0.8)); /* Gradiente radial */
+  transition: width 0.4s ease, height 0.4s ease;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 0;
 }
 
 nav ul li a:hover::before {
-    width: 0;
-    height: 0;
-    transform: translate(-50%, -50%) scale(1);
+  width: 0;
+  height: 0;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 nav ul li a span {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 
 /* Submenú */
 nav ul ul {
-    display: none; 
-    position: absolute;
-    background-color: #c3d18f; 
-    padding: 1rem;
-    border-radius: 10px; 
-    top: 100%; /* Posicionar justo debajo del elemento padre */
-    left: 0;
-    z-index: 10; /* Asegurar que el submenú se superponga */
-    box-shadow: 0 8px 16px rgba(81, 218, 63, 0.3); /* Sombra para el submenú */
+  display: none; 
+  position: absolute;
+  background-color: #c3d18f; 
+  padding: 1rem;
+  border-radius: 10px; 
+  top: 100%; /* Posicionar justo debajo del elemento padre */
+  left: 0;
+  z-index: 10; /* Asegurar que el submenú se superponga */
+  box-shadow: 0 8px 16px rgba(81, 218, 63, 0.3); /* Sombra para el submenú */
 }
 
 nav ul li:hover > ul {
-    display: block; /* Mostrar submenú al pasar el mouse */
+  display: block; /* Mostrar submenú al pasar el mouse */
 }
 
 nav ul ul li {
-    margin: 0.5rem 0; 
+  margin: 0.5rem 0; 
 }
 
-/* Responsivo para dispositivos pequeños */
-@media (max-width: 576px) {
-    nav div {
-        flex-direction: column;
-    }
 
-    nav #navbarNav {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav ul li {
-        margin: 0.5rem 0; 
-    }
+/* Mostrar el menú en dispositivos grandes */
+@media (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
+  .menu-icon {
+    display: none;
+    
+  }
 }
 
-/* Responsivo para tablets */
-@media (min-width: 577px) and (max-width: 992px) {
-    nav ul {
-        justify-content: space-around; 
-    }
-
-    nav ul li {
-        margin: 0.5rem;
-    }
-}
-
-/* Responsivo para ordenadores */
-@media (min-width: 993px) {
-    nav ul {
-        justify-content: center; 
-    }
+/* Mostrar el menú hamburguesa en dispositivos pequeños */
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+ 
+  }
+  .menu-icon {
+    display: block;
+    
+  }
 }
